Bug 469419 - Floating panel mouse redirection interferes with drag and drop
Summary: Floating panel mouse redirection interferes with drag and drop
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 469568 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-05-06 16:37 UTC by Kai Uwe Broulik
Modified: 2023-10-21 08:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2023-05-06 16:37:27 UTC
SUMMARY
When clicking on a task bar entry in the floating area, the click is redirected to the applet but it immediately starts a drag operation without having moved the mouse.

STEPS TO REPRODUCE
1. Enable floating panel
2. Move mouse to the screen edge next to a task
3. Click mouse without moving it

OBSERVED RESULT
Drag pixmap appears

EXPECTED RESULT
No drag pixmap appears unless I actually start dragging

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.0 git master as of 2022-05-06
Comment 1 Kai Uwe Broulik 2023-05-13 03:31:01 UTC
*** Bug 469568 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2023-05-13 13:43:11 UTC
Seems to be caused by a weird interaction with the default drag distance; if you position your cursor a wee bit closer, but still in the empty area, it will work.
Comment 3 Bug Janitor Service 2023-10-19 14:58:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3428
Comment 4 Niccolò Venerandi 2023-10-21 08:35:20 UTC
Git commit 1badc933ce329c94f7b17a4a3349bd970ccf1f0c by Niccolò Venerandi.
Committed on 21/10/2023 at 10:34.
Pushed by niccolove into branch 'master'.

Add timestamps to redirected events in panel

M  +2    -0    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/1badc933ce329c94f7b17a4a3349bd970ccf1f0c