Add timestamps to redirected events in panel

BUG:469419